force-app/src/objects/cpm__Recurring_Mandate_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Auto_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For all previewed mandate schedule records it will be checked if the calculated run and processing dates are on a working day. If not, it will be clearly indicated to the user in the Generated Mandate Scheduled Preview section. The related Business Hours record defined by this field is used to determine whether a specific date is a valid working day. Note that 13:00 / 1pm is used to check if a specific date is a valid working day.</description>
        <inlineHelpText>Business Hours record that is used for checking if calculated run and processing dates are on a working day.</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Recurring Mandate Schedules</relationshipLabel>
        <relationshipName>Recurring_Mandate_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__End_Date__c</fullName>
        <inlineHelpText>End date of the period that mandate schedule records will be generated for. Mandate schedule records will be generated with a processing date until the end date, but not after the end date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Exclude_from_Auto_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are creating a schedule that you want to run manually by changing the schedule status, please select this option. If Auto Run is enabled in the FinDock Setup, this schedule will otherwise be run automatically.</inlineHelpText>
        <label>Exclude from Auto-Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Initial_Generated_JSON__c</fullName>
        <inlineHelpText>Log field filled by system. Do not change. Contains the generated mandate schedules preview json before any changes by the user.</inlineHelpText>
        <label>Initial Generated JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Monthly_Day_Strategy__c</fullName>
        <inlineHelpText>Strategy used to calculate the Processing / Run day. Available strategies: 
- Day of Month: Day of month specified in field Targeted Day of Month will be used. 
- First Monday: First Monday of this month
- Last Friday: Last Friday of this month</inlineHelpText>
        <label>Monthly Day Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day of Month</fullName>
                </value>
                <value>
                    <fullName>First Monday</fullName>
                </value>
                <value>
                    <fullName>Last Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Friday.</inlineHelpText>
        <label>Process on Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Monday.</inlineHelpText>
        <label>Process on Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Saturday.</inlineHelpText>
        <label>Process on Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Sunday.</inlineHelpText>
        <label>Process on Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Thursday.</inlineHelpText>
        <label>Process on Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Tuesday.</inlineHelpText>
        <label>Process on Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Process_on_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if mandate schedule should be processed on Wednesday.</inlineHelpText>
        <label>Process on Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Processing_Date_Conflict_Strategy__c</fullName>
        <inlineHelpText>Strategy used to determine what action to take if the calculated Processing Date is not a working day based on the selected business hours. This only applies to Auto Create records.</inlineHelpText>
        <label>Processing Date Conflict Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Previous working day</fullName>
                </value>
                <value>
                    <fullName>Next working day</fullName>
                    <default>true</default>
                    <label>Next working day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Repeat_Frequency__c</fullName>
        <inlineHelpText>Best explained with an example. If value is 3:
- Weekly: Mandate schedule records will be generated once every 3 weeks. 
- Monthly: Mandate schedule records will be generated every quarter. 
Typical value: 1, so once every week or month.</inlineHelpText>
        <label>Repeat Frequency</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Run_Date_Conflict_Strategy__c</fullName>
        <inlineHelpText>Strategy used to determine what action to take if the calculated Run Date is not a working day based on the selected business hours. This only applies to Auto Create records.</inlineHelpText>
        <label>Run Date Conflict Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Previous working day</fullName>
                    <default>true</default>
                    <label>Previous working day</label>
                </value>
                <value>
                    <fullName>Next working day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Run_of_Days_before_Processing_date__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Used to calculate the run date. Processing date is calculated first and then this field is used to determine the run date. If a Business Hours record is attached, business days will be subtracted. If not, days, including weekends, are subtracted.</inlineHelpText>
        <label>Run # of Business Days before Proc. Date</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Start_Date__c</fullName>
        <inlineHelpText>Start date of the period that mandate schedule records will be generated for. Mandate schedule records will be generated with a processing date as of the start date, but not before the start date.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <inlineHelpText>Should be New for new Recurring Mandate Schedule records and Generated after Mandate Schedule records have been generated. System will set status to Generated after records have been generated.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Stored_JSON__c</fullName>
        <inlineHelpText>Log field filled by system. Do not change. Contains the mandate schedules preview json after any changes by the user.</inlineHelpText>
        <label>Stored JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Sub_Type__c</fullName>
        <description>Information field only, populated by a trigger</description>
        <label>Sub Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <inlineHelpText>Used directly, without any change or processing, into the Target field of the generated Mandate Schedule records. Refer to Mandate Schedule documentation for more help on this field.</inlineHelpText>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Targeted_Day_of_Month__c</fullName>
        <inlineHelpText>Only relevant if the Monthly Day Strategy is &quot;Day of Month&quot;. The day of month (1-31) in this field is then used for the Processing / Run date.</inlineHelpText>
        <label>Targeted Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Mandate Schedule</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__Start_Date__c</columns>
        <columns>cpm__End_Date__c</columns>
        <columns>cpm__Target__c</columns>
        <columns>cpm__Sub_Type__c</columns>
        <columns>cpm__Auto_Create__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recurring Mandate Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Mandate Schedules</pluralLabel>
    <recordTypes>
        <fullName>cpm__Daily</fullName>
        <active>true</active>
        <label>Daily</label>
    </recordTypes>
    <recordTypes>
        <fullName>cpm__Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>cpm__Weekly</fullName>
        <active>true</active>
        <label>Weekly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__Day_of_month_validation</fullName>
        <active>true</active>
        <errorConditionFormula>if (AND (RecordType.DeveloperName == &apos;Monthly&apos;,
ISPICKVAL( cpm__Monthly_Day_Strategy__c , &apos;Day of Month&apos;),
ISBLANK(TEXT( cpm__Targeted_Day_of_Month__c ))
),true,false)</errorConditionFormula>
        <errorDisplayField>cpm__Targeted_Day_of_Month__c</errorDisplayField>
        <errorMessage>Targeted Day of Month is required for &apos;Day of Month&apos; strategy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__End_Date_required_for_non_auto_create</fullName>
        <active>true</active>
        <description>End date is a required field if the record is a non auto create record</description>
        <errorConditionFormula>IF ( AND (!cpm__Auto_Create__c, ISBLANK( cpm__End_Date__c )), true, false)</errorConditionFormula>
        <errorDisplayField>cpm__End_Date__c</errorDisplayField>
        <errorMessage>End Date is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Monthly_Strategy_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>if (AND (RecordType.DeveloperName == &apos;Monthly&apos;,ISBLANK(TEXT( cpm__Monthly_Day_Strategy__c ))),true,false)</errorConditionFormula>
        <errorDisplayField>cpm__Monthly_Day_Strategy__c</errorDisplayField>
        <errorMessage>Monthly Day Strategy is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Process_Day_required_for_Weekly</fullName>
        <active>true</active>
        <errorConditionFormula>if (AND (RecordType.DeveloperName == &apos;Weekly&apos;,
cpm__Process_on_Monday__c = false,
cpm__Process_on_Tuesday__c = false,
cpm__Process_on_Wednesday__c = false,
cpm__Process_on_Thursday__c = false,
cpm__Process_on_Friday__c = false,
cpm__Process_on_Saturday__c = false,
cpm__Process_on_Sunday__c = false
),true,false)</errorConditionFormula>
        <errorMessage>Please select one or more days to process on</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Processing_Date_Conflict_Required</fullName>
        <active>true</active>
        <description>Processing date conflict strategy is required when it is an Auto Create Record</description>
        <errorConditionFormula>AND (cpm__Auto_Create__c, cpm__Sub_Type__c == &apos;MANUAL&apos;, ISBLANK(TEXT(cpm__Processing_Date_Conflict_Strategy__c)))</errorConditionFormula>
        <errorDisplayField>cpm__Processing_Date_Conflict_Strategy__c</errorDisplayField>
        <errorMessage>Processing Date Conflict Strategy is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Repeat_Frequency_ge_1</fullName>
        <active>true</active>
        <errorConditionFormula>cpm__Repeat_Frequency__c &lt; 1</errorConditionFormula>
        <errorMessage>Repeat Frequency must be 1 or higher</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Run_Date_Conflict_Required</fullName>
        <active>true</active>
        <description>Run date conflict strategy is required when it is an Auto Create Record</description>
        <errorConditionFormula>if (AND (cpm__Auto_Create__c, cpm__Sub_Type__c != &apos;MANUAL&apos;, ISBLANK(TEXT(  cpm__Run_Date_Conflict_Strategy__c  ))),true,false)</errorConditionFormula>
        <errorDisplayField>cpm__Run_Date_Conflict_Strategy__c</errorDisplayField>
        <errorMessage>Run Date Conflict Strategy is required</errorMessage>
    </validationRules>
</CustomObject>